--- a/devconnector/resources/css/styles.css
+++ b/devconnector/resources/css/styles.css
@@ -1,8 +1,30 @@
 body {
-  background: lightblue;
-  font: 18px Arial, Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background-color: #4517b8;
+  color: #333;
+}
+:root {
+  /* it refers the root element called html 
+    : formatings for ur root element/html tag will be specified here
+*/
+  --primary-color: #17a2b8;
+  --dark-color: #343a40;
+  --light-color: #f4f4f4;
+  --danger-color: #dc3545;
+  --success-color: #28a745;
+  --font-face: "arial";
 }
 
-h1 {
-  font: 30px sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0; /* top, right, bottom, left */
+  padding: 0;
+  background: #f4f4f4;
+}
+/* a tag*/
+a {
+  color: var(--primary-color);
+  text-decoration: none;
 }
