--- a/devconnector/resources/css/styles.css
+++ b/devconnector/resources/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #4517b8;
+  background-color: #fff;
   color: #333;
 }
 :root {
@@ -21,10 +21,37 @@ body {
   box-sizing: border-box;
   margin: 0; /* top, right, bottom, left */
   padding: 0;
-  background: #f4f4f4;
 }
 /* a tag*/
 a {
   color: var(--primary-color);
   text-decoration: none;
+}
+
+ul {
+  /* unordered list wherever we will use ul tag there it will be applied. to handle the menu items*/
+  list-style: none;
+}
+
+img {
+  /* image tag */
+
+  width: 100%;
+}
+
+/* creating custom styles for : there we have to define th css classes. 
+.className
+*/
+.btn {
+  /* here btn is a custom class which iwll hold all btn related details(formatting)*/
+
+  display: inline-block;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.4rem 1.3rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s, ease-in;
+  outline: none;
 }
