--- a/devconnector/resources/css/styles.css
+++ b/devconnector/resources/css/styles.css
@@ -55,3 +55,16 @@ img {
   transition: opacity 0.2s, ease-in;
   outline: none;
 }
+
+/* div : containers
+
+can we have common formatting ?
+yes*/
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 6rem;
+  margin-bottom: 1rem;
+}
